MicroserviceChapterWise/k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: product

  template:
    metadata:
      labels:
        app: product

    spec:
      containers:
        - name: product
          image: firdousalam2058/product-service:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 3002
